deploy/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice
spec:
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: microservice
          image: microservice
          ports:
            - name: "web"
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
